[gd_scene load_steps=147 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://explosion/0046.png" type="Texture" id=2]
[ext_resource path="res://explosion/0025.png" type="Texture" id=3]
[ext_resource path="res://explosion/0045.png" type="Texture" id=4]
[ext_resource path="res://explosion/0037.png" type="Texture" id=5]
[ext_resource path="res://explosion/0047.png" type="Texture" id=6]
[ext_resource path="res://explosion/0055.png" type="Texture" id=7]
[ext_resource path="res://explosion/0039.png" type="Texture" id=8]
[ext_resource path="res://explosion/0056.png" type="Texture" id=9]
[ext_resource path="res://explosion/0042.png" type="Texture" id=10]
[ext_resource path="res://explosion/0050.png" type="Texture" id=11]
[ext_resource path="res://explosion/0036.png" type="Texture" id=12]
[ext_resource path="res://explosion/0024.png" type="Texture" id=13]
[ext_resource path="res://explosion/0052.png" type="Texture" id=14]
[ext_resource path="res://explosion/0048.png" type="Texture" id=15]
[ext_resource path="res://explosion/0053.png" type="Texture" id=16]
[ext_resource path="res://explosion/0057.png" type="Texture" id=17]
[ext_resource path="res://explosion/0058.png" type="Texture" id=18]
[ext_resource path="res://explosion/0028.png" type="Texture" id=19]
[ext_resource path="res://explosion/0026.png" type="Texture" id=20]
[ext_resource path="res://explosion/0027.png" type="Texture" id=21]
[ext_resource path="res://explosion/0033.png" type="Texture" id=22]
[ext_resource path="res://explosion/0035.png" type="Texture" id=23]
[ext_resource path="res://explosion/0040.png" type="Texture" id=24]
[ext_resource path="res://explosion/0054.png" type="Texture" id=25]
[ext_resource path="res://explosion/0029.png" type="Texture" id=26]
[ext_resource path="res://explosion/0031.png" type="Texture" id=27]
[ext_resource path="res://explosion/0034.png" type="Texture" id=28]
[ext_resource path="res://explosion/0038.png" type="Texture" id=29]
[ext_resource path="res://explosion/0041.png" type="Texture" id=30]
[ext_resource path="res://explosion/0044.png" type="Texture" id=31]
[ext_resource path="res://explosion/0049.png" type="Texture" id=32]
[ext_resource path="res://explosion/0032.png" type="Texture" id=33]
[ext_resource path="res://explosion/0030.png" type="Texture" id=34]
[ext_resource path="res://explosion/0043.png" type="Texture" id=35]
[ext_resource path="res://explosion/0051.png" type="Texture" id=36]
[ext_resource path="res://explosion/0023.png" type="Texture" id=37]
[ext_resource path="res://explosion/0138.png" type="Texture" id=38]
[ext_resource path="res://explosion/0131.png" type="Texture" id=39]
[ext_resource path="res://explosion/0136.png" type="Texture" id=40]
[ext_resource path="res://explosion/0139.png" type="Texture" id=41]
[ext_resource path="res://explosion/0130.png" type="Texture" id=42]
[ext_resource path="res://explosion/0137.png" type="Texture" id=43]
[ext_resource path="res://explosion/0133.png" type="Texture" id=44]
[ext_resource path="res://explosion/0134.png" type="Texture" id=45]
[ext_resource path="res://explosion/0129.png" type="Texture" id=46]
[ext_resource path="res://explosion/0132.png" type="Texture" id=47]
[ext_resource path="res://explosion/0140.png" type="Texture" id=48]
[ext_resource path="res://explosion/0135.png" type="Texture" id=49]
[ext_resource path="res://explosion/0141.png" type="Texture" id=50]
[ext_resource path="res://explosion/0059.png" type="Texture" id=51]
[ext_resource path="res://explosion/0072.png" type="Texture" id=52]
[ext_resource path="res://explosion/0085.png" type="Texture" id=53]
[ext_resource path="res://explosion/0091.png" type="Texture" id=54]
[ext_resource path="res://explosion/0061.png" type="Texture" id=55]
[ext_resource path="res://explosion/0078.png" type="Texture" id=56]
[ext_resource path="res://explosion/0065.png" type="Texture" id=57]
[ext_resource path="res://explosion/0062.png" type="Texture" id=58]
[ext_resource path="res://explosion/0069.png" type="Texture" id=59]
[ext_resource path="res://explosion/0083.png" type="Texture" id=60]
[ext_resource path="res://explosion/0077.png" type="Texture" id=61]
[ext_resource path="res://explosion/0089.png" type="Texture" id=62]
[ext_resource path="res://explosion/0092.png" type="Texture" id=63]
[ext_resource path="res://explosion/0088.png" type="Texture" id=64]
[ext_resource path="res://explosion/0093.png" type="Texture" id=65]
[ext_resource path="res://explosion/0060.png" type="Texture" id=66]
[ext_resource path="res://explosion/0070.png" type="Texture" id=67]
[ext_resource path="res://explosion/0073.png" type="Texture" id=68]
[ext_resource path="res://explosion/0064.png" type="Texture" id=69]
[ext_resource path="res://explosion/0066.png" type="Texture" id=70]
[ext_resource path="res://explosion/0071.png" type="Texture" id=71]
[ext_resource path="res://explosion/0076.png" type="Texture" id=72]
[ext_resource path="res://explosion/0079.png" type="Texture" id=73]
[ext_resource path="res://explosion/0074.png" type="Texture" id=74]
[ext_resource path="res://explosion/0081.png" type="Texture" id=75]
[ext_resource path="res://explosion/0068.png" type="Texture" id=76]
[ext_resource path="res://explosion/0084.png" type="Texture" id=77]
[ext_resource path="res://explosion/0067.png" type="Texture" id=78]
[ext_resource path="res://explosion/0063.png" type="Texture" id=79]
[ext_resource path="res://explosion/0075.png" type="Texture" id=80]
[ext_resource path="res://explosion/0080.png" type="Texture" id=81]
[ext_resource path="res://explosion/0086.png" type="Texture" id=82]
[ext_resource path="res://explosion/0087.png" type="Texture" id=83]
[ext_resource path="res://explosion/0090.png" type="Texture" id=84]
[ext_resource path="res://explosion/0082.png" type="Texture" id=85]
[ext_resource path="res://explosion/0098.png" type="Texture" id=86]
[ext_resource path="res://explosion/0097.png" type="Texture" id=87]
[ext_resource path="res://explosion/0110.png" type="Texture" id=88]
[ext_resource path="res://explosion/0094.png" type="Texture" id=89]
[ext_resource path="res://explosion/0111.png" type="Texture" id=90]
[ext_resource path="res://explosion/0115.png" type="Texture" id=91]
[ext_resource path="res://explosion/0116.png" type="Texture" id=92]
[ext_resource path="res://explosion/0117.png" type="Texture" id=93]
[ext_resource path="res://explosion/0107.png" type="Texture" id=94]
[ext_resource path="res://explosion/0118.png" type="Texture" id=95]
[ext_resource path="res://explosion/0120.png" type="Texture" id=96]
[ext_resource path="res://explosion/0123.png" type="Texture" id=97]
[ext_resource path="res://explosion/0121.png" type="Texture" id=98]
[ext_resource path="res://explosion/0124.png" type="Texture" id=99]
[ext_resource path="res://explosion/0126.png" type="Texture" id=100]
[ext_resource path="res://explosion/0102.png" type="Texture" id=101]
[ext_resource path="res://explosion/0106.png" type="Texture" id=102]
[ext_resource path="res://explosion/0122.png" type="Texture" id=103]
[ext_resource path="res://explosion/0125.png" type="Texture" id=104]
[ext_resource path="res://explosion/0099.png" type="Texture" id=105]
[ext_resource path="res://explosion/0109.png" type="Texture" id=106]
[ext_resource path="res://explosion/0127.png" type="Texture" id=107]
[ext_resource path="res://explosion/0119.png" type="Texture" id=108]
[ext_resource path="res://explosion/0095.png" type="Texture" id=109]
[ext_resource path="res://explosion/0112.png" type="Texture" id=110]
[ext_resource path="res://explosion/0128.png" type="Texture" id=111]
[ext_resource path="res://explosion/0101.png" type="Texture" id=112]
[ext_resource path="res://explosion/0100.png" type="Texture" id=113]
[ext_resource path="res://explosion/0103.png" type="Texture" id=114]
[ext_resource path="res://explosion/0104.png" type="Texture" id=115]
[ext_resource path="res://explosion/0108.png" type="Texture" id=116]
[ext_resource path="res://explosion/0113.png" type="Texture" id=117]
[ext_resource path="res://explosion/0114.png" type="Texture" id=118]
[ext_resource path="res://explosion/0105.png" type="Texture" id=119]
[ext_resource path="res://explosion/0096.png" type="Texture" id=120]
[ext_resource path="res://explosion/0015.png" type="Texture" id=121]
[ext_resource path="res://explosion/0018.png" type="Texture" id=122]
[ext_resource path="res://explosion/0008.png" type="Texture" id=123]
[ext_resource path="res://explosion/0019.png" type="Texture" id=124]
[ext_resource path="res://explosion/0007.png" type="Texture" id=125]
[ext_resource path="res://explosion/0016.png" type="Texture" id=126]
[ext_resource path="res://explosion/0021.png" type="Texture" id=127]
[ext_resource path="res://explosion/0017.png" type="Texture" id=128]
[ext_resource path="res://explosion/0022.png" type="Texture" id=129]
[ext_resource path="res://explosion/0020.png" type="Texture" id=130]
[ext_resource path="res://explosion/0010.png" type="Texture" id=131]
[ext_resource path="res://explosion/0011.png" type="Texture" id=132]
[ext_resource path="res://explosion/0012.png" type="Texture" id=133]
[ext_resource path="res://explosion/0006.png" type="Texture" id=134]
[ext_resource path="res://explosion/0013.png" type="Texture" id=135]
[ext_resource path="res://explosion/0014.png" type="Texture" id=136]
[ext_resource path="res://explosion/0009.png" type="Texture" id=137]
[ext_resource path="res://explosion/0001.png" type="Texture" id=138]
[ext_resource path="res://explosion/0002.png" type="Texture" id=139]
[ext_resource path="res://explosion/0004.png" type="Texture" id=140]
[ext_resource path="res://explosion/0003.png" type="Texture" id=141]
[ext_resource path="res://explosion/0005.png" type="Texture" id=142]
[ext_resource path="res://Super.gd" type="Script" id=143]
[ext_resource path="res://Theme.tres" type="Theme" id=144]
[ext_resource path="res://explosion.wav" type="AudioStream" id=145]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 138 ), ExtResource( 139 ), ExtResource( 141 ), ExtResource( 140 ), ExtResource( 142 ), ExtResource( 134 ), ExtResource( 125 ), ExtResource( 123 ), ExtResource( 137 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 121 ), ExtResource( 126 ), ExtResource( 128 ), ExtResource( 122 ), ExtResource( 124 ), ExtResource( 130 ), ExtResource( 127 ), ExtResource( 129 ), ExtResource( 37 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 27 ), ExtResource( 33 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 29 ), ExtResource( 8 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 10 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 32 ), ExtResource( 11 ), ExtResource( 36 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 51 ), ExtResource( 66 ), ExtResource( 55 ), ExtResource( 58 ), ExtResource( 79 ), ExtResource( 69 ), ExtResource( 57 ), ExtResource( 70 ), ExtResource( 78 ), ExtResource( 76 ), ExtResource( 59 ), ExtResource( 67 ), ExtResource( 71 ), ExtResource( 52 ), ExtResource( 68 ), ExtResource( 74 ), ExtResource( 80 ), ExtResource( 72 ), ExtResource( 61 ), ExtResource( 56 ), ExtResource( 73 ), ExtResource( 81 ), ExtResource( 75 ), ExtResource( 85 ), ExtResource( 60 ), ExtResource( 77 ), ExtResource( 53 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 64 ), ExtResource( 62 ), ExtResource( 84 ), ExtResource( 54 ), ExtResource( 63 ), ExtResource( 65 ), ExtResource( 89 ), ExtResource( 109 ), ExtResource( 120 ), ExtResource( 87 ), ExtResource( 86 ), ExtResource( 105 ), ExtResource( 113 ), ExtResource( 112 ), ExtResource( 101 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 119 ), ExtResource( 102 ), ExtResource( 94 ), ExtResource( 116 ), ExtResource( 106 ), ExtResource( 88 ), ExtResource( 90 ), ExtResource( 110 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 95 ), ExtResource( 108 ), ExtResource( 96 ), ExtResource( 98 ), ExtResource( 103 ), ExtResource( 97 ), ExtResource( 99 ), ExtResource( 104 ), ExtResource( 100 ), ExtResource( 107 ), ExtResource( 111 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 47 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 50 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="Super" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 143 )
__meta__ = {
"_edit_lock_": true
}

[node name="Game" parent="." instance=ExtResource( 1 )]
pause_mode = 1

[node name="Backdrop" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -64.0
margin_right = 1975.0
margin_bottom = 1144.0
color = Color( 0.0470588, 0.121569, 0.12549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="RichTextLabel" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -539.0
margin_top = 85.0
margin_right = 557.0
margin_bottom = 207.0
theme = ExtResource( 144 )
text = "Notification Extermination"
scroll_active = false

[node name="PlayButton" type="Button" parent="Menu"]
margin_left = 267.0
margin_top = 314.0
margin_right = 454.0
margin_bottom = 426.0
theme = ExtResource( 144 )
text = "Play"
flat = true

[node name="Hints" type="CheckButton" parent="Menu"]
margin_left = 265.0
margin_top = 463.0
margin_right = 559.0
margin_bottom = 577.0
theme = ExtResource( 144 )
pressed = true
text = "Hints"

[node name="LoseScore" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -791.0
margin_top = -411.0
margin_right = -91.0
margin_bottom = -106.0
theme = ExtResource( 144 )
autowrap = true

[node name="Explosion" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 960, 540 )
frames = SubResource( 1 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="AudioStreamPlayer" parent="Explosion"]
stream = ExtResource( 145 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="lose" from="Game" to="." method="_on_Game_lose"]
[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="Menu/Hints" to="." method="_on_Hints_toggled"]
